--- a/Setup/.env.example
+++ b/Setup/.env.example
@@ -12,7 +12,7 @@ APP_LOG_TO_FILE=true
 APP_LOG_LEVEL_EMAIL=warning
 #с какого уровня сообщений писать в файл лога
 APP_LOG_LEVEL_FILE=debug
-#почта для отправки лога
+#почта для отправки лога (через запятую можно указать несколько)
 APP_LOG_SEND_TO=
 #если true, то рекапча локально всегда правильная (не проверяется)
 APP_RECAPTCHA_CHECK_LOCAL=true
