--- a/Setup/.env
+++ b/Setup/.env
@@ -6,7 +6,7 @@ APP_LOG_TO_EMAIL=true
 APP_LOG_TO_FILE=true
 APP_LOG_LEVEL_EMAIL=warning
 APP_LOG_LEVEL_FILE=debug
-APP_LOG_SEND_TO=zabrodskij@techart.ru
+APP_LOG_SEND_TO=
 APP_RECAPTCHA_CHECK_LOCAL=false
 APP_ROUTER_ACTIVE=true
 APP_ROUTER_CACHE_ACTIVE=false
