--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "techart/bxapp",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "description": "Пакет для организации бэка битрикса",
   "license": "Apache-2.0",
   "authors": [
@@ -19,7 +19,8 @@
 	"dompdf/dompdf": "^2.0",
 	"iio/libmergepdf": "^4.0",
 	"phpoffice/phpspreadsheet": "^2.1",
-	"ovidigital/js-object-to-json": ">=1.1"
+	"ovidigital/js-object-to-json": ">=1.1",
+	"symfony/var-dumper": "^7.0"
   },
   "autoload": {
     "psr-4": {"Techart\\BxApp\\": "lib/"}
