--- a/Setup/.env
+++ b/Setup/.env
@@ -6,6 +6,8 @@ APP_LOG_TO_EMAIL=true
 APP_LOG_TO_FILE=true
 APP_LOG_LEVEL_EMAIL=warning
 APP_LOG_LEVEL_FILE=debug
+APP_LOG_FRONTEND_TO_EMAIL=false
+APP_LOG_FRONTEND_TO_FILE=false
 APP_LOG_SEND_TO=
 APP_RECAPTCHA_CHECK_LOCAL=false
 APP_ROUTER_ACTIVE=true
