--- a/Setup/.env.example
+++ b/Setup/.env.example
@@ -12,6 +12,10 @@ APP_LOG_TO_FILE=true
 APP_LOG_LEVEL_EMAIL=warning
 #с какого уровня сообщений писать в файл лога
 APP_LOG_LEVEL_FILE=debug
+# отправлять лог фронтенда на почту?
+APP_LOG_FRONTEND_TO_EMAIL=false
+# записывать ошибки фронтенда в файл лога?
+APP_LOG_FRONTEND_TO_FILE=false
 #почта для отправки лога (через запятую можно указать несколько)
 APP_LOG_SEND_TO=
 #если true, то рекапча локально всегда правильная (не проверяется)
