--- a/Setup/.env
+++ b/Setup/.env
@@ -9,7 +9,13 @@ APP_LOG_LEVEL_FILE=debug
 APP_LOG_FRONTEND_TO_EMAIL=false
 APP_LOG_FRONTEND_TO_FILE=false
 APP_LOG_SEND_TO=
-APP_RECAPTCHA_CHECK_LOCAL=false
 APP_ROUTER_ACTIVE=true
 APP_ROUTER_CACHE_ACTIVE=false
 APP_ROUTER_CHECK_HTTPS=false
+APP_CAPTCHA_CHECK_LOCAL=false
+APP_RECAPTCHA_SITE_KEY=
+APP_RECAPTCHA_SECRET_KEY=
+APP_SMARTCAPTCHA_SITE_KEY=
+APP_SMARTCAPTCHA_SECRET_KEY=
+APP_YOOKASSA_SHOP_ID=
+APP_YOOKASSA_SECRET_KEY=
