--- a/Setup/.env.example
+++ b/Setup/.env.example
@@ -18,11 +18,23 @@ APP_LOG_FRONTEND_TO_EMAIL=false
 APP_LOG_FRONTEND_TO_FILE=false
 #почта для отправки лога (через запятую можно указать несколько)
 APP_LOG_SEND_TO=
-#если true, то рекапча локально всегда правильная (не проверяется)
-APP_RECAPTCHA_CHECK_LOCAL=true
 #роуты для API активны или нет?
 APP_ROUTER_ACTIVE=true
 #роуту надо делать кэш или нет
 APP_ROUTER_CACHE_ACTIVE=true
 #роут должен работать только по https протоколу?
 APP_ROUTER_CHECK_HTTPS=false
+#если true, то капчи локально всегда правильные (не проверяется)
+APP_CAPTCHA_CHECK_LOCAL=true
+#клиентский ключ гугл рекапчи
+APP_RECAPTCHA_SITE_KEY=
+#секретный ключ гугл рекапчи
+APP_RECAPTCHA_SECRET_KEY=
+#клиентский ключ яндекс смарт капчи
+APP_SMARTCAPTCHA_SITE_KEY=
+#секретный ключ яндекс смарт капчи
+APP_SMARTCAPTCHA_SECRET_KEY=
+#идентификатор магазина в юкассе
+APP_YOOKASSA_SHOP_ID=
+#секретный ключ от юкассы
+APP_YOOKASSA_SECRET_KEY=
