--- a/Setup/.env.example
+++ b/Setup/.env.example
@@ -1,4 +1,6 @@
+#текущий язык сайта
 APP_LANG=ru
+#какую сборку подключать: prod|dev
 APP_ENV=prod
 #включено использования кэша в трейте или нет
 APP_TRAIT_CACHE=true
@@ -12,10 +14,6 @@ APP_LOG_TO_FILE=true
 APP_LOG_LEVEL_EMAIL=warning
 #с какого уровня сообщений писать в файл лога
 APP_LOG_LEVEL_FILE=debug
-# отправлять лог фронтенда на почту?
-APP_LOG_FRONTEND_TO_EMAIL=false
-# записывать ошибки фронтенда в файл лога?
-APP_LOG_FRONTEND_TO_FILE=false
 #почта для отправки лога (через запятую можно указать несколько)
 APP_LOG_SEND_TO=
 #роуты для API активны или нет?
