--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "techart/bxapp",
-  "version": "0.4.8",
+  "version": "0.4.9",
   "description": "Пакет для организации бэка битрикса",
   "license": "Apache-2.0",
   "authors": [
@@ -20,7 +20,8 @@
 	"iio/libmergepdf": "^4.0",
 	"phpoffice/phpspreadsheet": "^2.1",
 	"ovidigital/js-object-to-json": ">=1.1",
-	"symfony/var-dumper": "^7.0"
+	"symfony/var-dumper": "^7.0",
+	"icamys/php-sitemap-generator": "^5.0"
   },
   "autoload": {
     "psr-4": {"Techart\\BxApp\\": "lib/"}
