--- a/Setup/.env
+++ b/Setup/.env
@@ -1,4 +1,6 @@
+# описание смотри в .env.example
 APP_ENV=dev
+APP_LOCAL_FORCED_CACHE=false
 APP_TRAIT_CACHE=true
 APP_LOG_BAR=true
 APP_LOG_TO_EMAIL=true
