--- a/Setup/.env.example
+++ b/Setup/.env.example
@@ -1,6 +1,8 @@
 #какую сборку подключать: prod|dev
 APP_ENV=prod
-#включено использования кэша в трейте или нет
+#принудительно использовать кэш локально
+APP_LOCAL_FORCED_CACHE=false
+#включено использования кэша в трейте CacheTrait или нет
 APP_TRAIT_CACHE=true
 #выводить ли лог бар на сайт?
 APP_LOG_BAR=true
