--- a/Setup/.env.example
+++ b/Setup/.env.example
@@ -36,3 +36,5 @@ APP_SMARTCAPTCHA_SECRET_KEY=
 APP_YOOKASSA_SHOP_ID=
 #секретный ключ от юкассы
 APP_YOOKASSA_SECRET_KEY=
+#домен для Open API файла
+APP_OPENAPI_DOMAIN=
