--- a/Setup/.env.example
+++ b/Setup/.env.example
@@ -1,5 +1,7 @@
 #какую сборку подключать: prod|dev
 APP_ENV=prod
+#нужно создавать статик апи кэш или нет
+APP_STATIC_API_ACTIVE=true
 #принудительно использовать кэш локально
 APP_LOCAL_FORCED_CACHE=false
 #включено использования кэша в трейте CacheTrait или нет
