--- a/Setup/.env.default
+++ b/Setup/.env.default
@@ -1,5 +1,5 @@
 # описание смотри в .env.example
-APP_ENV=dev
+APP_ENV=prod
 APP_STATIC_API_ACTIVE=false
 APP_LOCAL_FORCED_CACHE=false
 APP_TRAIT_CACHE=true
