--- a/Setup/.env.default
+++ b/Setup/.env.default
@@ -1,6 +1,7 @@
 # описание смотри в .env.example
 APP_ENV=prod
 APP_STATIC_API_ACTIVE=false
+APP_HTML_PAGE_CACHE=false
 APP_LOCAL_FORCED_CACHE=false
 APP_TRAIT_CACHE=true
 APP_LOG_BAR=true
