--- a/Setup/.env.example
+++ b/Setup/.env.example
@@ -1,7 +1,9 @@
 #какую сборку подключать: prod|dev
 APP_ENV=prod
 #нужно создавать статик апи кэш или нет
-APP_STATIC_API_ACTIVE=true
+APP_STATIC_API_ACTIVE=false
+#нужно создать HTML-кеш страницы
+APP_HTML_PAGE_CACHE=false
 #принудительно использовать кэш локально
 APP_LOCAL_FORCED_CACHE=false
 #включено использования кэша в трейте CacheTrait или нет
