--- a/Setup/.env.default
+++ b/Setup/.env.default
@@ -4,16 +4,17 @@ APP_STATIC_API_ACTIVE=false
 APP_HTML_PAGE_CACHE=false
 APP_LOCAL_FORCED_CACHE=false
 APP_TRAIT_CACHE=true
-APP_LOG_BAR=true
+APP_DEBUG_BAR=true
 APP_LOG_TO_EMAIL=true
 APP_LOG_TO_FILE=true
+APP_LOG_LEVEL_DEBUGBAR=warning
 APP_LOG_LEVEL_EMAIL=warning
 APP_LOG_LEVEL_FILE=debug
 APP_LOG_SEND_TO=
 APP_ROUTER_ACTIVE=true
-APP_ROUTER_CACHE_ACTIVE=false
+APP_ROUTER_CACHE_ACTIVE=true
 APP_ROUTER_CHECK_HTTPS=false
-APP_CAPTCHA_CHECK_LOCAL=false
+APP_CAPTCHA_CHECK_LOCAL=true
 APP_RECAPTCHA_SITE_KEY=
 APP_RECAPTCHA_SECRET_KEY=
 APP_SMARTCAPTCHA_SITE_KEY=
