--- a/Setup/.env.example
+++ b/Setup/.env.example
@@ -8,12 +8,14 @@ APP_HTML_PAGE_CACHE=false
 APP_LOCAL_FORCED_CACHE=false
 #включено использования кэша в трейте CacheTrait или нет
 APP_TRAIT_CACHE=true
-#выводить ли лог бар на сайт?
-APP_LOG_BAR=true
+#выводить ли дебаг бар на сайт?
+APP_DEBUG_BAR=true
 #отправлять лог на почту?
 APP_LOG_TO_EMAIL=true
 #записывать в файл лога?
 APP_LOG_TO_FILE=true
+#с какого уровня сообщений отправлять логи в дебагбар
+APP_LOG_LEVEL_DEBUGBAR=warning
 #с какого уровня сообщений отправлять лог на почту
 APP_LOG_LEVEL_EMAIL=warning
 #с какого уровня сообщений писать в файл лога
