--- a/Setup/.env.example
+++ b/Setup/.env.example
@@ -28,7 +28,7 @@ APP_ROUTER_ACTIVE=true
 APP_ROUTER_CACHE_ACTIVE=true
 #роут должен работать только по https протоколу?
 APP_ROUTER_CHECK_HTTPS=false
-#если true, то капчи локально всегда правильные (не проверяется)
+#если false, то капчи локально всегда правильные (не проверяется)
 APP_CAPTCHA_CHECK_LOCAL=true
 #клиентский ключ гугл рекапчи
 APP_RECAPTCHA_SITE_KEY=
